      - Use JavaScript tree API for building the tree.
      - Add repository favorites.

    [jone]

  - Update DocProperties when documents are moved/pasted and checked-in/checked out.
    Create a journal entry when modifying/initializing DocProperties.
    [deiferni]

  - Fix an issue with z3c.form inline validation.
    [deiferni]

  - Reactivate statefilter for Dossiers.
    [phgross]


3.4.1 (2014-09-03)
------------------

- Monkey patch ftw.mail.inbound.createMailInContainer because
  `preserved_as_paper` has a schema level default, its default
  value doesn't get set correctly, so we set explicitely after setting
  the defaults.
  [lgraf]

- Mail preview tab: fixed bug in mimetype lookup for attachments with
  a wrong mimetype.
  [phgross]


3.4.0 (2014-08-28)
------------------

- General fixes:

  - Fixed translation for filing_number column in dossier listings.
    [phgross]
  - Also check for not supplied mails, when check if dossier could be resolved.
    [phgross]
  - Fixed unicode decode bug in task overview.
    [lknoepfel]
  - OGQuickUploadCapableFileFactory: Set default values before adding content to container.
    (Prevents values set by handlers on ObjectAddedEvent to be overwritten again).
    [lgraf]
  - Fix issue with `prevent_deletion` subscriber not being able to acquire membership_tool
    because of broken acquisition during Plone site deletion.
    [lgraf]
  - Customize plone.dexterity default view for all dexterity content in
    order to be able to omit specific fields, and remove previous customizations.
    [lgraf]


- Changes to document metadata:

  - Document metadata: Refactor behaviors to be a package with separate modules.
    [lgraf]
  - Monkey patch DexterityContent.__getattr__.
    This is required to support dynamic lookup of schema-level default values for
    fields in behaviors. It basically is a backport of this Dexterity 2.x fix: